@@ -1,6 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.6
 Date: 23/1/26
+  Balancing:
+    - Rebalanced item buffs giving multipliers to strongbox loot value.
+    - Rebalanced item buffs giving build distance.
   Bugfixes:
     - Fixed that some quests based on finding trades were not giving their full amount of free hex claims reward.
 ---------------------------------------------------------------------------------------------------
